--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -22,17 +22,17 @@
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link" href="javascript:void(0)">
-                        <i class="material-icons">person</i> Tester surname
+                        <i class="material-icons">person</i> {{userInfo.name}}
                         <p>
                             <span class="d-lg-none d-md-block">Account</span>
                         </p>
                     </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item"  (click)="logOut()">
                     <a class="nav-link" href="javascript:void(0)">
                         <i class="material-icons">power_settings_new</i>Log out
                         <p>
-                            <span class="d-lg-non d-md-block">Logout</span>
+                            <span class="d-lg-non d-md-block" >Logout</span>
                         </p>
                     </a>
                 </li>
