--- a/src/app/components/login/login-form.component.html
+++ b/src/app/components/login/login-form.component.html
@@ -27,10 +27,11 @@
                             </div>
                         
                           <button mat-raised-button type="submit" (click)="onLogin()" style="margin-top: 1rem; align-self: center;" class="btn btn-info center button"  >Login</button>
-                          <p></p>
+                    
                       </form>
                   </div>
               </div>
+              <div *ngIf="hideSpinner" class="loader"></div>
           </div>
         
       </div>
