--- a/src/app/components/spinner/spinner-overlay.component.html
+++ b/src/app/components/spinner/spinner-overlay.component.html
@@ -1,3 +1,3 @@
 <div class="spinner-progress">
-  <app-spinner-overlay></app-spinner-overlay>
+  <!-- <app-spinner-overlay></app-spinner-overlay> -->
 </div>
