--- a/src/app/components/branches/branches-all/branches-all.component.html
+++ b/src/app/components/branches/branches-all/branches-all.component.html
@@ -1,6 +1,7 @@
 <div class="main-content">
     <div class="container-fluid">
-         <div class="row">
+        <div *ngIf="hideSpinner" class="loader"></div>
+        <div class="row"  *ngIf="!hideSpinner">
             <div class="col-md-9">
                 <div class="row">
                     <div class="col-lg-3 col-md-6 col-sm-6" *ngFor="let branch of Branch">
@@ -26,8 +27,6 @@
                 <div class="card">
                   <ul class="mt-3 unstyled list-group">
                     <li class="list-group-item list-group-item-action"><a href="#/edit-branch" class="d-flex flex-row"><i class="material-icons mr-2">store</i>  Edit branch</a></li>
-                    <!-- <li class="list-group-item list-group-item-action"><a href="#/find-branch" class="d-flex flex-row"><i class="material-icons mr-2">search</i> Find a branch</a></li> -->
-                    <!-- <li class="list-group-item list-group-item-action"><a href="#/branches" class="d-flex flex-row"><i class="material-icons mr-2">list</i>View all branches</a></li> -->
                   </ul>
                 </div>   
             </div>
