--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,122 +1,127 @@
-<div class="main-content" *ngIf="hideSpinner">
+<div class="main-content" >
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-lg-3 col-md-6 col-sm-6" *ngFor="let branch of Branch">
-                <div class="card card-stats">
-                    <div class="card-header card-header-danger card-header-icon">
-                        <div class="card-icon bg-danger">
-                            <i class="material-icons">store</i>
+        <div *ngIf="hideSpinner" class="loader"></div>
+        <div  *ngIf="!hideSpinner">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-6" *ngFor="let branch of Branch">
+                    <div class="card card-stats">
+                        <div class="card-header card-header-danger card-header-icon">
+                            <div class="card-icon bg-danger">
+                                <i class="material-icons">store</i>
+                            </div>
+                            <p class="card-category">{{branch.branch.name}}</p>
+                            <h3 class="card-title">{{branch.totalRegistrations}}</h3>
                         </div>
-                        <p class="card-category">{{branch.branch.name}}</p>
-                        <h3 class="card-title">{{branch.totalRegistrations}}</h3>
-                    </div>
-                    <div class="card-footer">
-                        <div class="stats" *ngIf="regitrationPresent(branch.lastUpdate)">
-                            <i class="material-icons">date_range</i> Last {{branch.lastUpdate | date: 'dd/MM/yyyy, h:mma'}}
-                        </div>
-                        <div class="stats" *ngIf="!regitrationPresent(branch.lastUpdate)">
-                            <i class="material-icons">date_range</i> No registrations
+                        <div class="card-footer">
+                            <div class="stats" *ngIf="regitrationPresent(branch.lastUpdate)">
+                                <i class="material-icons">date_range</i> Last {{branch.lastUpdate | date: 'dd/MM/yyyy, h:mma'}}
+                            </div>
+                            <div class="stats" *ngIf="!regitrationPresent(branch.lastUpdate)">
+                                <i class="material-icons">date_range</i> No registrations
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card card-chart">
-                    <div class="card-header card-header-danger">
-                        <div class="ct-chart" id="dailyRegistrationChart"></div>
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">Last Weeks Registrations</h4>
-                        <p class="card-category">
-                            <span class="text-success"> {{Dashboard.lastWeekTotal}} </span> total registrations last
-                            week.
-                        </p>
-                    </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card card-chart">
+                        <div class="card-header card-header-danger">
+                            <div class="ct-chart" id="dailyRegistrationChart"></div>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">Last Weeks Registrations</h4>
+                            <p class="card-category">
+                                <span class="text-success"> {{Dashboard.lastWeekTotal}} </span> total registrations last
+                                week.
+                            </p>
+                        </div>
 
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card card-chart">
-                    <div class="card-header card-header-danger">
-                        <div class="ct-chart" id="currentRegistrationChart"></div>
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">This Weeks Registrations</h4>
-                        <p class="card-category" *ngIf="Dashboard.increase">
-                            <span class="text-success"><i class="fa fa-long-arrow-up"></i> {{Dashboard.growth}}% </span>
-                            increase in this weeks registrations.
-                        </p>
-                        <p class="card-category" *ngIf="!Dashboard.increase">
-                            <span class="text-danger" *ngIf="!Dashboard.increase"><i class="fa fa-long-arrow-down"></i>
-                                {{Dashboard.growth}}% </span> increase in this weeks registrations.
-                        </p>
                     </div>
                 </div>
-            </div>
-          
-        </div>
-        <div class="row">
-          
-            <div class="col-md-12">
-                <div class="card">
-                    <div class="card-header card-header-danger">
-                        <h4 class="card-title">Latest Registrations</h4>
-                        <p class="card-category">New registrations on September, 2023</p>
+                <div class="col-md-4">
+                    <div class="card card-chart">
+                        <div class="card-header card-header-danger">
+                            <div class="ct-chart" id="currentRegistrationChart"></div>
+                        </div>
+                        <div class="card-body">
+                            <h4 class="card-title">This Weeks Registrations</h4>
+                            <p class="card-category" *ngIf="Dashboard.increase">
+                                <span class="text-success"><i class="fa fa-long-arrow-up"></i> {{Dashboard.growth}}%
+                                </span>
+                                increase in this weeks registrations.
+                            </p>
+                            <p class="card-category" *ngIf="!Dashboard.increase">
+                                <span class="text-danger" *ngIf="!Dashboard.increase"><i
+                                        class="fa fa-long-arrow-down"></i>
+                                    {{Dashboard.growth}}% </span> increase in this weeks registrations.
+                            </p>
+                        </div>
                     </div>
-                   
-                    <div class="mat-elevation-z8">
-                        <table mat-table [dataSource]="dataSource">
+                </div>
 
-                            <!-- Position Column -->
-                            <ng-container matColumnDef="registrationNo">
-                                <th mat-header-cell *matHeaderCellDef> Registration No. </th>
-                                <td mat-cell *matCellDef="let element"> {{element.registrationNumber}} </td>
-                            </ng-container>
+            </div>
+            <div class="row">
 
-                            <!-- Name Column -->
-                            <ng-container matColumnDef="studentName">
-                                <th mat-header-cell *matHeaderCellDef> Name </th>
-                                <td mat-cell *matCellDef="let element"> {{element.studentName}} </td>
-                            </ng-container>
+                <div class="col-md-12">
+                    <div class="card">
+                        <div class="card-header card-header-danger">
+                            <h4 class="card-title">Latest Registrations</h4>
+                            <p class="card-category">New registrations on September, 2023</p>
+                        </div>
 
-                            <!-- Weight Column -->
-                            <ng-container matColumnDef="registrationDate">
-                                <th mat-header-cell *matHeaderCellDef> Registration Date </th>
-                                <td mat-cell *matCellDef="let element"> {{element.registrationDate | date:
-                                    'dd/MM/yyyy'}} </td>
-                            </ng-container>
+                        <div class="mat-elevation-z8">
+                            <table mat-table [dataSource]="dataSource">
 
-                            <!-- Symbol Column -->
-                            <ng-container matColumnDef="registeredBy">
-                                <th mat-header-cell *matHeaderCellDef> Registered By </th>
-                                <td mat-cell *matCellDef="let element"> {{element.createBy.name}} </td>
-                            </ng-container>
+                                <!-- Position Column -->
+                                <ng-container matColumnDef="registrationNo">
+                                    <th mat-header-cell *matHeaderCellDef> Registration No. </th>
+                                    <td mat-cell *matCellDef="let element"> {{element.registrationNumber}} </td>
+                                </ng-container>
 
-                            <!-- Symbol Column -->
-                            <ng-container matColumnDef="courseName">
-                                <th mat-header-cell *matHeaderCellDef> Course Name </th>
-                                <td mat-cell *matCellDef="let element"> {{element.course}} </td>
-                            </ng-container>
-                            <!-- Symbol Column -->
+                                <!-- Name Column -->
+                                <ng-container matColumnDef="studentName">
+                                    <th mat-header-cell *matHeaderCellDef> Name </th>
+                                    <td mat-cell *matCellDef="let element"> {{element.studentName}} </td>
+                                </ng-container>
 
-                            <ng-container matColumnDef="branchName">
-                                <th mat-header-cell *matHeaderCellDef> Branch Name </th>
-                                <td mat-cell *matCellDef="let element"> {{element.branch.name}} </td>
-                            </ng-container>
+                                <!-- Weight Column -->
+                                <ng-container matColumnDef="registrationDate">
+                                    <th mat-header-cell *matHeaderCellDef> Registration Date </th>
+                                    <td mat-cell *matCellDef="let element"> {{element.registrationDate | date:
+                                        'dd/MM/yyyy'}} </td>
+                                </ng-container>
 
-                            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                            <tr mat-row (click)="selection(row)" *matRowDef="let row; columns: displayedColumns;"></tr>
-                        </table>
+                                <!-- Symbol Column -->
+                                <ng-container matColumnDef="registeredBy">
+                                    <th mat-header-cell *matHeaderCellDef> Registered By </th>
+                                    <td mat-cell *matCellDef="let element"> {{element.createBy.name}} </td>
+                                </ng-container>
 
-                        <mat-paginator #paginator [pageSizeOptions]="[5, 10, 20]" [length]="results.length" [pageSize]="5" showFirstLastButtons
-                            aria-label="Select page of periodic elements">
-                        </mat-paginator>
+                                <!-- Symbol Column -->
+                                <ng-container matColumnDef="courseName">
+                                    <th mat-header-cell *matHeaderCellDef> Course Name </th>
+                                    <td mat-cell *matCellDef="let element"> {{element.course}} </td>
+                                </ng-container>
+                                <!-- Symbol Column -->
+
+                                <ng-container matColumnDef="branchName">
+                                    <th mat-header-cell *matHeaderCellDef> Branch Name </th>
+                                    <td mat-cell *matCellDef="let element"> {{element.branch.name}} </td>
+                                </ng-container>
+
+                                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                                <tr mat-row (click)="selection(row)" *matRowDef="let row; columns: displayedColumns;">
+                                </tr>
+                            </table>
+
+                            <mat-paginator #paginator [pageSizeOptions]="[5, 10, 20]" [length]="results.length"
+                                [pageSize]="5" showFirstLastButtons aria-label="Select page of periodic elements">
+                            </mat-paginator>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div *ngIf="!hideSpinner" class="loader"></div>
