--- a/src/app/registration-find/registration-view.component.html
+++ b/src/app/registration-find/registration-view.component.html
@@ -1,6 +1,7 @@
 <div class="main-content">
     <div class="container-fluid">
-        <div class="row">
+        <div *ngIf="hideSpinner" class="loader"></div>
+        <div class="row"  *ngIf="!hideSpinner">
             <div class="card">
                 <div class="card-header card-header-danger">
                     <h4 class="card-title">Registration Details</h4>
