--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -24,7 +24,7 @@
 .loader {
   color: #000;
   text-indent: -9999em;
-  margin: 88px auto;
+  margin: 17rem auto;
   position: relative;
   font-size: 11px;
   -webkit-transform: translateZ(0);
