--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,6 +1,7 @@
 <div class="main-content">
   <div class="container-fluid">
-      <div class="row">
+    <div *ngIf="hideSpinner" class="loader"></div>
+    <div class="row"  *ngIf="!hideSpinner">
           <div class="col-md-9">
               <div class="card">
                   <div class="card-header card-header-danger">
@@ -77,7 +78,7 @@
                                <input [formControlName]="fields.streetAddress" [id]="fields.streetAddress" matInput placeholder="Street Address">
                              </mat-form-field>
                           </div>
-                          <div class="col-md-3">
+                          <div class="col-md-6">
                             <mat-form-field class="example-full-width" >
                              <input [formControlName]="fields.city" [id]="fields.city" matInput placeholder="City" required type="text">
                             </mat-form-field>
@@ -114,11 +115,11 @@
           <div class="col-md-3">
             <div class="card">
               <ul class="mt-3 unstyled list-group">
-                <li class="list-group-item list-group-item-action"><a [routerLink]="'/registration'"  class="d-flex flex-row"><i class="material-icons mr-2">store</i>  Add new registration</a></li>
+                <!-- <li class="list-group-item list-group-item-action"><a [routerLink]="'/registration'"  class="d-flex flex-row"><i class="material-icons mr-2">store</i>  Add new registration</a></li> -->
                 <!-- <li class="list-group-item list-group-item-action"><a [routerLink]="'/find-registration'"  class="d-flex flex-row"><i class="material-icons mr-2">search</i> Find a registration</a></li> -->
                 <li class="list-group-item list-group-item-action"><a [routerLink]="'/reports'"  class="d-flex flex-row"><i class="material-icons mr-2">list</i>View all registrations</a></li>
               </ul>
-              <div *ngIf="hideSpinner" class="loader"></div>
+        
             </div>   
           </div>
       </div>
