--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -49,7 +49,7 @@
                             <p class="card-category" *ngIf="Dashboard.increase">
                                 <span class="text-success"><i class="fa fa-long-arrow-up"></i> {{Dashboard.growth}}%
                                 </span>
-                                increase in this weeks registrations.
+                                {{Dashboard.currentWeekTotal}}  total registrations this week
                             </p>
                             <p class="card-category" *ngIf="!Dashboard.increase">
                                 <span class="text-danger" *ngIf="!Dashboard.increase"><i
